--- a/part5/bloglist/src/index.css
+++ b/part5/bloglist/src/index.css
@@ -14,3 +14,11 @@
 .error {
   color: red;
 }
+
+.entry {
+  padding-top: 10px;
+  padding-left: 2px;
+  border: solid;
+  border-width: 1px;
+  margin-bottom: 5px;
+}
